Display pdf in iframe.
#6875

--- a/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/Get.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/Get.cshtml
@@ -1,7 +1,10 @@
-﻿@model Quintessence.QCandidate.Contracts.Responses.AssessmentDto
+﻿@using Quintessence.QCandidate.Controllers
+@model Quintessence.QCandidate.Contracts.Responses.AssessmentDto
 
 @{
     ViewData["Title"] = "Get";
+    var simulationCombinationId = Model.DayProgram?.ProgramComponents?.FirstOrDefault(c => c.SimulationCombinationId != null)?.SimulationCombinationId;
+    var pdfUrl = Url.Action(nameof(SimulationCombinationsController.GetPdf), "SimulationCombinations", new {simulationCombinationId = simulationCombinationId, language = "NL"});
 }
 
 <h1>Get</h1>
@@ -9,10 +12,7 @@
 <div>
     <h4>AssessmentDto</h4>
     <hr />
-    <dl class="row">
-    </dl>
-</div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+
+    <iframe src="@pdfUrl" width="100%" height="500px">
+    </iframe>
 </div>
