Use IOptionsMonitor instead of passing IConfiguration around + hardcode language for now + various fixes
#6875

--- a/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/Get.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/Get.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Get";
     var simulationCombinationId = Model.DayProgram?.ProgramComponents?.FirstOrDefault(c => c.SimulationCombinationId != null)?.SimulationCombinationId;
-    var pdfUrl = Url.Action(nameof(SimulationCombinationsController.GetPdf), "SimulationCombinations", new {simulationCombinationId = simulationCombinationId, language = "NL"});
+    var pdfUrl = $"{Url.Action(nameof(SimulationCombinationsController.GetPdf), "SimulationCombinations", new {simulationCombinationId = simulationCombinationId, language = "NL"})}#toolbar=0";
 }
 
 <h1>Get</h1>
