--- a/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/Get.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/Get.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Get";
     var simulationCombinationId = Model.DayProgram?.ProgramComponents?.FirstOrDefault(c => c.SimulationCombinationId != null)?.SimulationCombinationId;
-    var pdfUrl = $"{Url.Action(nameof(SimulationCombinationsController.GetPdf), "SimulationCombinations", new {simulationCombinationId = simulationCombinationId, language = "NL"})}#toolbar=0";
+    var pdfUrl = $"{Url.Action(nameof(SimulationCombinationsController.GetPdf), "SimulationCombinations", new { simulationCombinationId = simulationCombinationId })}#toolbar=0";
 }
 
 <h1>Get</h1>
@@ -13,6 +13,10 @@
     <h4>AssessmentDto</h4>
     <hr />
 
-    <iframe src="@pdfUrl" width="100%" height="500px">
-    </iframe>
+    @*TODO: Replace by result of HasSimulationCombinationPdfByIdAndLanguageQueryHandler invocation*@
+    @if(simulationCombinationId.HasValue)
+    {
+        <iframe src="@pdfUrl" width="100%" height="500px">
+        </iframe>
+    }
 </div>
