--- a/src/Hosts/Quintessence.QCandidate.Web/Views/ProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/ProgramComponents/Details.cshtml
@@ -2,10 +2,15 @@
 @model Quintessence.QCandidate.Contracts.Responses.ProgramComponentDto
 @{
     var pdfUrl = $"{Url.Action(nameof(SimulationCombinationsController.GetPdf), "SimulationCombinations", new { simulationCombinationId = Model.SimulationCombinationId })}#toolbar=0";
+    var title = Model.Description ?? Model.Name;
 }
 
-@if(ViewBag.CanShowPdf)
+<div class="context">
+    <h1>@title</h1>
+</div>
+
+@if (ViewBag.CanShowPdf)
 {
-    <iframe src="@pdfUrl" width="100%" height="500px">
+    <iframe src="@pdfUrl" width="100%" height="1075px">
     </iframe>
 }
