--- a/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Candidate/Views/Candidate/Edit.cshtml
+++ b/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Candidate/Views/Candidate/Edit.cshtml
@@ -68,10 +68,11 @@
 <div class="grid_6">
     <fieldset>
         <legend>Candidate information</legend>
-        @using (Html.BeginForm(ViewContext.RouteData.Values["action"].ToString(), "Candidate", FormMethod.Post, new { id = "CandidateForm" }))
+        @using(Html.BeginForm(ViewContext.RouteData.Values["action"].ToString(), "Candidate", FormMethod.Post, new { id = "CandidateForm" }))
         {
-            @Html.EditorFor(m => m, "BaseEntityViewTemplate");
-                                                          
+            @Html.HiddenFor(m => m.QCandidateUserId)
+            @Html.EditorFor(m => m, "BaseEntityViewTemplate")
+
             <table class="properties">
                 <tbody>
                     <tr>
@@ -147,10 +148,10 @@
                         </td>
                     </tr>
                 </tbody>
-            </table> 
-            
+            </table>
+
             <div class="right-text">
-                <input type="submit" class="button" id="SubmitFormButtonLink" value="@(ViewBag.ViewMode == ViewMode.Edit ? "Save" : "Create")"/>
+                <input type="submit" class="button" id="SubmitFormButtonLink" value="@(ViewBag.ViewMode == ViewMode.Edit ? "Save" : "Create")" />
             </div>
         }
     </fieldset>
