--- a/src/Hosts/Quintessence.QCandidate.Web/Views/ProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/ProgramComponents/Details.cshtml
@@ -1,16 +1,11 @@
-﻿@using Quintessence.QCandidate.Controllers
-@model Quintessence.QCandidate.Contracts.Responses.ProgramComponentDto
-@{
-    var pdfUrl = $"{Url.Action(nameof(SimulationCombinationsController.GetPdf), "SimulationCombinations", new { simulationCombinationId = Model.SimulationCombinationId })}#toolbar=0";
-    var title = Model.Description ?? Model.Name;
-}
+﻿@model Quintessence.QCandidate.Models.ProgramComponentModel
 
 <div class="context">
-    <h1>@title</h1>
+    <h1>@Model.Title</h1>
 </div>
 
-@if (ViewBag.CanShowPdf)
+@if (Model.CanShowPdf)
 {
-    <iframe src="@pdfUrl" width="100%" height="1075px">
+    <iframe src="@Model.PdfUrl" width="100%" height="1075px">
     </iframe>
 }
