--- a/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/Get.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/Get.cshtml
@@ -1,20 +1,18 @@
-﻿@using MediatR
-@using Quintessence.QCandidate.Controllers
-@using Quintessence.QCandidate.Core.Queries
-@using Quintessence.QCandidate.Helpers
+﻿@using Microsoft.AspNetCore.Mvc.Localization
 @model Quintessence.QCandidate.Models.AssessmentModel
+@inject IViewLocalizer Localizer
 
 <div class="container">
     <div class="context">
         <span class="company">@Model.Customer</span> <span class="project">@Model.Position</span>
         <h1>@Model.Date.ToLongDateString()</h1>
-        <span class="location">Locatie: @Model.Location</span>
+        <span class="location">@Localizer["Location 2"]: @Model.Location</span>
     </div>
 
     @*<div class="assessment-context">
-        <h2>Assessment context</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et scelerisque tortor. Donec vel aliquam tortor. Sed suscipit tortor eu enim condimentum condimentum. Nulla egestas arcu nec nunc suscipit, eu semper odio lobortis. Maecenas at dolor sit amet quam ultrices mattis. Nam eleifend, ligula at vestibulum bibendum, lectus neque consequat tellus, id malesuada nunc est non dolor. Sed non sagittis dui. Vivamus ullamcorper ultrices magna id vehicula. Praesent quis molestie sapien.</p>
-    </div>*@
+            <h2>Assessment context</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et scelerisque tortor. Donec vel aliquam tortor. Sed suscipit tortor eu enim condimentum condimentum. Nulla egestas arcu nec nunc suscipit, eu semper odio lobortis. Maecenas at dolor sit amet quam ultrices mattis. Nam eleifend, ligula at vestibulum bibendum, lectus neque consequat tellus, id malesuada nunc est non dolor. Sed non sagittis dui. Vivamus ullamcorper ultrices magna id vehicula. Praesent quis molestie sapien.</p>
+        </div>*@
 </div>
 <div class="container calendar-wrap">
     <div class="calendar-container">
