Use  new design

--- a/src/Hosts/Quintessence.QCandidate.Web/Views/ProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/ProgramComponents/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Quintessence.QCandidate.Models.ProgramComponentModel
+﻿@model Quintessence.QCandidate.Models.ProgramComponent
 
 <div class="context">
     <h1>@Model.Title</h1>
