--- a/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/Get.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/Get.cshtml
@@ -1,8 +1,4 @@
-﻿@using MediatR
-@using Quintessence.QCandidate.Controllers
-@using Quintessence.QCandidate.Core.Queries
-@using Quintessence.QCandidate.Helpers
-@model Quintessence.QCandidate.Models.Assessments.AssessmentModel
+﻿@model Quintessence.QCandidate.Models.Assessments.Assessment
 
 <div class="container">
     <div class="context">
@@ -16,43 +12,14 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et scelerisque tortor. Donec vel aliquam tortor. Sed suscipit tortor eu enim condimentum condimentum. Nulla egestas arcu nec nunc suscipit, eu semper odio lobortis. Maecenas at dolor sit amet quam ultrices mattis. Nam eleifend, ligula at vestibulum bibendum, lectus neque consequat tellus, id malesuada nunc est non dolor. Sed non sagittis dui. Vivamus ullamcorper ultrices magna id vehicula. Praesent quis molestie sapien.</p>
     </div>*@
 </div>
+
+
 <div class="container calendar-wrap">
-    <div class="calendar-container">
-        <div class="timings">
-            <div> <span> 8:00 </span></div>
-            <div> 8:30 </div>
-            <div> <span> 9:00 </span></div>
-            <div> 9:30 </div>
-            <div> <span> 10:00 </span></div>
-            <div> 10:30 </div>
-            <div> <span> 11:00 </span></div>
-            <div> 11:30 </div>
-            <div> <span> 12:00 </span></div>
-            <div> 12:30 </div>
-            <div> <span> 13:00 </span></div>
-            <div> 13:30 </div>
-            <div> <span> 14:00 </span></div>
-            <div> 14:30 </div>
-            <div> <span> 15:00 </span></div>
-            <div> 15:30 </div>
-            <div> <span> 16:00 </span></div>
-            <div> 16:30 </div>
-            <div> <span> 17:00 </span></div>
-            <div> 17:30 </div>
-            <div> <span> 18:00 </span></div>
-            <div> 18:30 </div>
-            <div> <span> 19:00 </span></div>
-        </div>
-
-        <div class="days" id="events">
-        </div>
-
-    </div>
+    <ul class="timeline">
+        @foreach(var programComponent in Model.ProgramComponents)
+        {
+            @Html.DisplayFor(m => programComponent)
+        }
+    </ul>
 </div>
 
-@section Scripts {
-    <script src="~/js/script.js"></script>
-    <script type="text/javascript">
-        layOutDay(@Html.Raw(Json.Serialize(Model.Events)));
-    </script>
-}
