--- a/src/Hosts/Quintessence.QCandidate.Web/Views/Shared/_Layout.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
 
     <footer>
         <div class="container">
-            <span class="copyright">©2020 Quintessence</span>
+            <span class="copyright">&copy; 2020 Quintessence</span>
             <div class="social-media right">
                 <a href="https://www.facebook.com/QuintessenceConsulting"><img src="~/img/facebook.svg" /></a>
                 <a href="https://www.linkedin.com/company/quintessence"><img src="~/img/linkedin.svg" /></a>
