--- a/src/Hosts/Quintessence.QCandidate.Web/wwwroot/css/style.css
+++ b/src/Hosts/Quintessence.QCandidate.Web/wwwroot/css/style.css
@@ -10,252 +10,270 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
-b, u, i,dl, dt, dd, ol, ul, li,
+b, u, i, dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, section, summary,
 time, audio {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-  font-family: 'Libre Franklin', sans-serif;
-  font-weight: 300;
-  color: #383838;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    font-family: 'Libre Franklin', sans-serif;
+    font-weight: 300;
+    color: #383838;
 }
 
 /* Top navigation */
 
 .top-nav {
-  width: 100%;
-  padding: 6px;
-  background-color: #F0F0F0;
+    width: 100%;
+    padding: 6px;
+    background-color: #F0F0F0;
 }
 
-.top-nav a {
-  font-size: 14px;
-  text-decoration: none;
-  margin-left: 10px;
-  color: #919191;
-}
+    .top-nav a {
+        font-size: 14px;
+        text-decoration: none;
+        margin-left: 10px;
+        color: #919191;
+    }
 
-.top-nav a img {
-  width: 16px;
-  vertical-align: middle;
-  margin-right: 10px;
-  opacity: 0.3;
-}
+        .top-nav a img {
+            width: 16px;
+            vertical-align: middle;
+            margin-right: 10px;
+            opacity: 0.3;
+        }
 
-.top-nav .social-media{
-  display: inline;
-  margin-right: 30px;
-}
+    .top-nav .social-media {
+        display: inline;
+        margin-right: 30px;
+    }
 
-.top-nav a img:hover {
-  opacity: 0.5;
-  transition: opacity 0.5s;
-}
+    .top-nav a img:hover {
+        opacity: 0.5;
+        transition: opacity 0.5s;
+    }
 
-.top-nav a.language-active {
-  color: #525252;
-}
+    .top-nav a.language-active {
+        color: #525252;
+    }
 
 /* Main navigation */
 nav, .nav-wrapper {
-  height: 100px !important;
+    height: 100px !important;
 }
 
 nav {
-  background-color: #fff !important;
-  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.1) !important;
+    background-color: #fff !important;
+    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.1) !important;
 }
 
 .brand-logo {
-  width: 100px;
-  position: relative !important;
+    width: 100px;
+    position: relative !important;
 }
 
-.brand-logo img {
-  height: 70px;
-  margin-top: 15px;
-}
+    .brand-logo img {
+        height: 70px;
+        margin-top: 15px;
+    }
 
 .navigation {
-  display: inline-block;
-  
+    display: inline-block;
 }
 
-.navigation li {
-  color: #003167 !important;
-  font-size: 16px;
-}
+    .navigation li {
+        color: #003167 !important;
+        font-size: 16px;
+    }
 
 .user-information {
-  margin-top: 20px;
+    margin-top: 20px;
 }
 
-.user-information li {
-  color: #383838 !important;
-}
+    .user-information li {
+        color: #383838 !important;
+    }
 
-.user-information .btn, .user-information .btn:active, .user-information .btn:focus {
-  background-color: #ff9000;
-  color: #fff;
-  text-transform: none;
-  box-shadow: none;
-  border: 1px solid #ff9000;
-  border-radius: 3px;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 15px;
-  letter-spacing: 0.050em;
-  line-height: 1em;
-  text-decoration: none;
-  padding: 15px 25px;
-  height: auto;
-}
+    .user-information .btn, .user-information .btn:active, .user-information .btn:focus {
+        background-color: #ff9000;
+        color: #fff;
+        text-transform: none;
+        box-shadow: none;
+        border: 1px solid #ff9000;
+        border-radius: 3px;
+        cursor: pointer;
+        display: inline-block;
+        font-size: 15px;
+        letter-spacing: 0.050em;
+        line-height: 1em;
+        text-decoration: none;
+        padding: 15px 25px;
+        height: auto;
+    }
 
-.user-information .btn:hover {
-  background-color: transparent;
-  color: #ff9000;
-  transition: 0.2s;
-  box-shadow: none;
-}
+        .user-information .btn:hover {
+            background-color: transparent;
+            color: #ff9000;
+            transition: 0.2s;
+            box-shadow: none;
+        }
 
 /* Context */
 
 .context {
-  margin: 40px 0px;
-  text-align: center;
+    margin: 40px 0px;
+    text-align: center;
 }
 
-.context h1 {
-  text-align: center;
-  margin: 12px;
-  font-size: 34px;
-  font-weight: 300;
-  color: #383838;
-}
+    .context h1 {
+        text-align: center;
+        margin: 12px;
+        font-size: 34px;
+        font-weight: 300;
+        color: #383838;
+    }
 
-.context .project, .context .location {
-  color: #003167;
-  font-size: 16px;
-}
+    .context .project, .context .location {
+        color: #003167;
+        font-size: 16px;
+    }
 
-.context .company {
-  color: #2FB127;
-  font-size: 16px;
-}
+    .context .company {
+        color: #2FB127;
+        font-size: 16px;
+    }
 
 .assessment-context {
-  max-width: 720px;
-  background-color: #F0F0F0;
-  border-radius: 13px;
-  padding: 20px;
-  margin: auto;
-  text-align: center;
-  margin-bottom: 40px;
+    max-width: 720px;
+    background-color: #F0F0F0;
+    border-radius: 13px;
+    padding: 20px;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 40px;
 }
 
-.assessment-context h2 {
-  font-size: 20px;
-  margin: 10px;
-  color: #003167;
+    .assessment-context h2 {
+        font-size: 20px;
+        margin: 10px;
+        color: #003167;
+    }
+
+    .assessment-context p {
+        font-size: 14px;
+    }
+
+.event .title {
+    color: #58ad40;
+    font-size: 130%;
 }
 
-.assessment-context p {
-  font-size: 14px;
-}
-
-/* Calendar */
-.calendar-wrap {
-  width: 720px !important;
-}
-
-.calendar-container {
-  height:1180px;
-  width: 720px;
-  display: inline-flex;
-  position: relative;
-  margin: auto;
-}
-
-.timings {
-  text-align: right;
-  padding-right: 10px;
-  width: 54px;
-  height: 1118px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: white;
-  font-size: 0.5em;
-  box-sizing: border-box
-}
-
-.timings span {
-  font-size: 200%;
-  color: #696969;
-}
-
-.days {
-  height: 1118px;
-  width: 620px;
-  padding: 0px 10px;
-  background-color: #F0F0F0;
-  border-color: #D1D1D1;
-  border-style: solid;
-  border-width: 1px;
-  box-sizing: border-box;
+.timeline a {
+    color: #58ad40;
+    display: block;
+    margin-top: 12px;
+    text-decoration: underline;
 }
 
 .assessor {
-  color: #9e9e9e;
-  display: inline-block;
-  margin-left: 10px;
+    color: #9e9e9e;
+    display: inline-block;
+    margin-left: 10px;
 }
 
-.event {
-  background-color: white;
-  border-style: solid;
-  border-width: 1px;
-  border-left-width: 5px;
-  border-color: #D1D1D1;
-  border-left-color: #58ad40;
-  padding-left: 10px;
-  padding-top: 5px;
-  position: absolute;
-  font-size: 12px;
-  box-sizing: border-box;
+/* Timeline */
+ul:not(.browser-default) {
+    padding-left: 50px !important;
 }
 
-.event .title {
-  color: #58ad40;
-  font-size: 130%;
+.timeline {
+    border-left: 4px solid #58ad40;
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+    background: #F0F0F0;
+    color: rgba(255, 255, 255, 0.8);
+    font-family: 'Chivo', sans-serif;
+    margin: 50px auto;
+    position: relative;
+    line-height: 1.4em;
+    font-size: 14px;
+    padding: 50px;
+    list-style: none;
+    text-align: left;
+    font-weight: 200;
+    max-width: 50%;
 }
 
-.documentlink a {
-  color: #58ad40;
-}
+    .timeline h2,
+    .timeline h3 {
+        font-weight: 400;
+        font-size: 1.4em;
+        color: #58ad40;
+    }
+
+    .timeline .program-component {
+        border-bottom: 1px dashed rgba(0, 0, 0, 0.1);
+        padding-bottom: 25px;
+        margin-bottom: 50px;
+        position: relative;
+    }
+
+        .timeline .program-component:last-of-type {
+            padding-bottom: 0;
+            margin-bottom: 0;
+            border: none;
+        }
+
+        .timeline .program-component:before,
+        .timeline .program-component:after {
+            position: absolute;
+            display: block;
+            top: 0;
+        }
+
+        .timeline .program-component:before {
+            left: -217.5px;
+            color: #6c6d6d;
+            content: attr(data-date);
+            text-align: right;
+            font-weight: 100;
+            font-size: 0.9em;
+            min-width: 120px;
+            font-family: 'Saira', sans-serif;
+        }
+
+        .timeline .program-component:after {
+            box-shadow: 0 0 0 4px #58ad40;
+            left: -57.85px;
+            background: #fff;
+            border-radius: 50%;
+            height: 11px;
+            width: 11px;
+            content: "";
+            top: 5px;
+        }
 
 /* Footer */
 
 footer {
-  background-color: #003167;
-  padding: 10px;
+    background-color: #003167;
+    padding: 10px;
 }
 
-footer .social-media img {
-  width: 16px;
-  vertical-align: middle;
-  margin-right: 10px;
-}
+    footer .social-media img {
+        width: 16px;
+        vertical-align: middle;
+        margin-right: 10px;
+    }
 
 .copyright {
-  color: #fff;
-  font-size: 14px;
+    color: #fff;
+    font-size: 14px;
 }
