--- a/src/Hosts/Quintessence.QCandidate.Web/wwwroot/css/style.css
+++ b/src/Hosts/Quintessence.QCandidate.Web/wwwroot/css/style.css
@@ -60,6 +60,14 @@ time, audio {
   transition: opacity 0.5s;
 }
 
+.top-nav .languages {
+    float: right;
+}
+
+.top-nav .languages .language-form {
+        float: left;
+}
+
 .top-nav a.language-active {
   color: #525252;
 }
