Add translations to QCandidate Add welcome text when no planning Update stored procedure with language candidate Confirmation dialog to Qplanet create project Sorting to Add Candidate in UnregisteredCandidates

--- a/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectGeneral/Create.cshtml
+++ b/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectGeneral/Create.cshtml
@@ -204,6 +204,9 @@
             $('#CreateNewProjectButton').click(function (event) {
                 event.preventDefault();
 
+                if (!confirm('Are you sure all entries are correct?'))
+                    return;
+
                 var form = $('#CreateProjectForm');
 
                 ShowDetailSaveDialog();
