browser spell checker enabled Resume page

--- a/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/EditProjectCandidateResume.cshtml
+++ b/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/EditProjectCandidateResume.cshtml
@@ -80,6 +80,7 @@
                     }
                     width: '900',
                     theme: 'simple',
+                    browser_spellcheck: true,
                     valid_styles : {'*' : 'font-weight,text-decoration'}
                 });
             });
