--- a/src/Hosts/Quintessence.QCandidate.Web/Views/ProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/ProgramComponents/Details.cshtml
@@ -1,8 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
-@using Microsoft.AspNetCore.Localization
 
-
-@model Quintessence.QCandidate.Models.ProgramComponent
+@model Quintessence.QCandidate.Models.ProgramComponents.ProgramComponent
 
 @inject IViewLocalizer Localizer
 
