Edited SP Assessment_GetByCandidateAndLanguage + edited release.sql. ProgramComponent : renamed controller + all related models/view. Made use of QCandidateLayout to show/hide link to PDF/Memo.
Related Work Items: #7786

--- a/src/Hosts/Quintessence.QCandidate.Web/Views/PdfProgramComponents/Details.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/PdfProgramComponents/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 
-@model Quintessence.QCandidate.Models.ProgramComponents.ProgramComponent
+@model Quintessence.QCandidate.Models.PdfProgramComponents.PdfProgramComponent
 
 @inject IViewLocalizer Localizer
 
