--- a/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/Get.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/Assessments/Get.cshtml
@@ -1,9 +1,4 @@
-﻿@using MediatR
-@using Quintessence.QCandidate.Controllers
-@using Quintessence.QCandidate.Core.Queries
-@using Quintessence.QCandidate.Helpers
-@using Microsoft.AspNetCore.Mvc.Localization
-@using Microsoft.AspNetCore.Localization
+﻿@using Microsoft.AspNetCore.Mvc.Localization
 
 @model Quintessence.QCandidate.Models.Assessments.Assessment
 
