--- a/src/Hosts/Quintessence.QCandidate.Web/wwwroot/css/style.css
+++ b/src/Hosts/Quintessence.QCandidate.Web/wwwroot/css/style.css
@@ -289,6 +289,10 @@ footer {
         width: 16px;
         vertical-align: middle;
         margin-right: 10px;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 42px;
     }
 
 .copyright {
