--- a/src/Hosts/Quintessence.QCandidate.Web/Views/Shared/_Layout.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
     <title>QCandidate</title>
     <link href="~/css/style.css" rel="stylesheet">
     <link href="~/css/materialize.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    @RenderSection("Styles", required: false)
 </head>
 
 <body>
